--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "test": "./node_modules/jest/bin/jest.js",
     "build": "tsc --build"
   },
