--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "license": "BSD-2-Clause",
   "dependencies": {
+    "@datastructures-js/binary-search-tree": "^5.0.1",
     "Faker": "~0.7.0",
+    "avl": "^1.5.3",
     "bluebird": "^3.4.1",
     "jest": "^26.6.3",
     "lodash": "^4.13.1"
